fix(KtField*): Align Placeholder Color with Design Token
The token for placeholders is supposedly text-03, not text-05

--- a/packages/kotti-ui/source/kotti-field-select/styles.scss
+++ b/packages/kotti-ui/source/kotti-field-select/styles.scss
@@ -144,7 +144,7 @@
 		}
 
 		.kt-field-select__placeholder {
-			color: var(--text-01);
+			color: var(--text-03);
 			opacity: 0.54; // appears to be the default user-agent opacity from the browser, in this case Firefox Developer Edition
 		}
 	}
